--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,3 +42,18 @@ jobs:
         with:
           file: ./coverage.txt
           fail_ci_if_error: false
+
+  race:
+    name: Race Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+
+      - name: Get dependencies
+        run: go mod download
+
+      - name: Run Tests
+        run: make race-many
